# Shellockolm-AI-CLI-MCP-Scanner

./: .all-contributorsrc  .gitattributes  .gitignore  .mcp-config.json  AI_GATEWAY_SECURITY_REPORT.md  BUILD_LOOP_TASKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_QUICK.md  LICENSE  MANIFEST.in  PRIVACY_AND_SECURITY.md  PROMOTION.md  README.md  SECURITY.md  action.yml  claude_desktop_config_EXAMPLE.json  mcp.json  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  topics
.github/workflows/: ci.yml  cve-monitor.yml
archives/: MANIFEST.in  README_NEW.md  shellockolm
data/: cve_details.txt  cves.txt  scanners.txt
docs/: AGENT_SCANNER.md  CLAUDE_CODE_CLI.md  CONTRIBUTORS.md  FAST_INSTALL.md  GITHUB_SCANNER.md  INSTALL.md  MCP_QUICK_START.md  PRIVACY_AND_SECURITY.md  PROMOTION.md  QUICKSTART.md  QUICK_START.md  THEMES.md  banner-setup.md
growth/: AGENT_SKILL_SCANNER_SPEC.md  SERVICES.md  SHOW_HN_DRAFT.md  SPONSORS.md
license-server/: README.md  wrangler.toml
license-server/src/: worker.js
osint/: ai-gateway-security-research.md  npm-nodejs-cves-2024-2026.json  npm-nodejs-cves-2024-2026.md  npm-nodejs-cves-quick-reference.md
osint/ai-security-research/: john-hammond-ai-security-coverage.md
scripts/: install.ps1  run_all_scans.py
src/: ENHANCEMENT_PLAN.md  auto_fix.py  cli.py  compat.py  configure_mcp.py  github_advisory.py  gui.py  ignore_handler.py  licensing.py  lockfile_analyzer.py  malware_analyzer.py  mcp_server.py  npm_audit.py  progress_tracker.py  scan.py  scan_simple.py  scanner.py  secrets_scanner.py  server.py  vulnerability_database.py  watch_mode.py
src/scanners/: __init__.py  agent_supply_chain.py  base.py  clawdbot.py  n8n.py  nextjs.py  nodejs.py  npm_packages.py  react_rsc.py
technical/: COMPLETE_CVE_INFO.md  ENHANCEMENTS.md  FINAL_SCAN_RESULTS.md  MCP_DESIGN.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  SECURITY_SCAN_SUMMARY.md  SUCCESS_SUMMARY.md  VULNERABILITY_REPORT.md
tests/: __init__.py  conftest.py  mcp_live_check.py  test_agent_supply_chain.py  test_cli_json_report.py  test_ignore_handler.py  test_scanners.py  test_secrets_scanner.py  test_smoke_imports.py  test_vulnerability_database.py
website/: README.md  index.html  package.json  tailwind.config.ts
website/src/: App.tsx  index.css
website/src/components/: FeaturesSection.tsx  FlipCard.tsx  Footer.tsx  HeroSection.tsx  InstallSection.tsx  LiveDemoSection.tsx  Navbar.tsx  PricingSection.tsx  ProTierSection.tsx  StatsSection.tsx
