[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelllockolm"
version = "2.0.0"
description = "Your Security Detective for React, Next.js & npm - Detect CVEs, malware, and supply chain attacks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "security", "vulnerability", "cve", "react", "nextjs", "rce",
    "vulnerability-scanner", "security-tools", "patch-management",
    "react-server-components", "cybersecurity", "devsecops",
    "npm", "malware-scanner", "supply-chain-security", "shelllockolm",
    "sherlock-holmes", "detective", "threat-detection"
]
authors = [
    {name = "HLS iTech", email = "hlarosesurprenant@gmail.com"}
]
maintainers = [
    {name = "HLS iTech", email = "hlarosesurprenant@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "packaging>=23.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hlsitechio/shelllockolm"
Documentation = "https://github.com/hlsitechio/shelllockolm/blob/main/README.md"
Repository = "https://github.com/hlsitechio/shelllockolm"
"Bug Tracker" = "https://github.com/hlsitechio/shelllockolm/issues"
Changelog = "https://github.com/hlsitechio/shelllockolm/blob/main/CHANGELOG.md"

[project.scripts]
shelllockolm = "scan_simple:main"
shelllockolm-scan = "scan_simple:main"
shelllockolm-fix = "auto_fix:main"
shelllockolm-patch = "mass_patcher:main"
shelllockolm-malware = "malware_scanner:main"
shelllockolm-github = "github_scanner:main"

[tool.setuptools]
packages = ["shelllockolm"]
package-dir = {"shelllockolm" = "src"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
